--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 	<!-- favicon.ico und ggf. apple-touch-icon.png in das Hauptverzeichnis -->
 
 	<link rel="stylesheet" href="css/main.css">
+	<!--[if lte IE 8]>
+    	<link rel="stylesheet" href="css/ie.css">
+	<![endif]-->
 	<script src="js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
